Freeipa/freeipa-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freeipa
  namespace: securehub
spec:
  selector:
    matchLabels:
      app: freeipa
  serviceName: "freeipa"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: freeipa
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - freeipa
              topologyKey: "kubernetes.io/hostname"
      dnsConfig:
        nameservers:
          - 138.4.2.10
          - 138.4.2.32
      containers:
        - name: freeipa
          image: quay.io/freeipa/freeipa-server:fedora-41-4.12.2
          readinessProbe:
            exec:
              command: ["/usr/bin/systemctl", "is-active", "--quiet", "ipa"]
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 50
            periodSeconds: 30
          args:
              - ipa-server-install
          securityContext:
            privileged: true
            seccompProfile:
              type: Unconfined
            capabilities:
              add:
                - SYS_TIME
                - SYS_ADMIN
          stdin: true
          tty: true
          ports:
            - containerPort: 53
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
            - containerPort: 88
            - containerPort: 88
              protocol: UDP
            - containerPort: 123
            - containerPort: 123
              protocol: UDP
            - containerPort: 389
            - containerPort: 443
            - containerPort: 464
            - containerPort: 464
              protocol: UDP
            - containerPort: 636
          volumeMounts:
            - name: ipa-data
              mountPath: /data
            - name: cgroups
              mountPath: /sys/fs/cgroup
            - name: run
              mountPath: /run
            - name: run-systemd
              mountPath: /run/systemd
            - name: tmp
              mountPath: /var/libexec/ipa
      hostname: freeipa.andion.eu
      volumes:
        - name: ipa-data
          persistentVolumeClaim:
            claimName: freeipa-volume
        - name: ipa-options
          configMap:
            name: freeipa-install-options
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: run
          emptyDir:
            medium: Memory
        - name: run-systemd
          emptyDir:
            medium: Memory
        - name: tmp
          emptyDir: {}
