Freeipa/freeipa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freeipa-service
  namespace: securehub
  annotations:
    metallb.universe.tf/address-pool: "primary"  # MetalLB asigna la IP pública
    metallb.universe.tf/allow-shared-ip: "true"  # Permite compartir la IP con otros servicios
spec:
  type: ClusterIP
  selector:
    app: freeipa
  ports:
    # DNS (TCP y UDP)
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP

    # HTTP y HTTPS
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP

    # LDAP (TCP)
    - name: ldap
      port: 389
      targetPort: 389
      protocol: TCP
    - name: ldaps
      port: 636
      targetPort: 636
      protocol: TCP

    # Kerberos (TCP y UDP)
    - name: kerberos-tcp
      port: 88
      targetPort: 88
      protocol: TCP
    - name: kerberos-udp
      port: 88
      targetPort: 88
      protocol: UDP

    # Kerberos Password Change (TCP y UDP)
    - name: kpasswd-tcp
      port: 464
      targetPort: 464
      protocol: TCP
    - name: kpasswd-udp
      port: 464
      targetPort: 464
      protocol: UDP

    # NTP (UDP)
    - name: ntp
      port: 123
      targetPort: 123
      protocol: UDP
