Freeipa/freeipa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freeipa-ingress
  namespace: securehub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: webfreeipa.andion.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freeipa-service
                port:
                  number: 4443
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freeipa-service
                port:
                  number: 8081
  tls:
    - hosts:
        - webfreeipa.andion.eu
      secretName: webfreeipa-secret-https
